--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.eth-gradient-1 {
+  background: linear-gradient(101.12deg, #3b82f6 0%, #3b3bb0 100%);
+}
+.eth-gradient-2 {
+  background: linear-gradient(101.12deg, #ff0099 0%, #3b3bb0 100%);
+}
 
 .white-bg {
   background: rgba(255, 255, 255, 0.2);
